# ZeroBot

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.zero/: settings.yaml.sample
config/: example.settings.yaml
crates/zerobot-cli/: AGENTS.md  Cargo.toml
crates/zerobot-cli/src/: main.rs  slash.rs  tui.rs
crates/zerobot-cli/src/tui/: app.rs  command.rs  component.rs  markdown.rs  message.rs  mod.rs  overlay.rs  theme.rs
crates/zerobot-cli/src/tui/components/: help_overlay.rs  history_search.rs  input_line.rs  message_item.rs  messages.rs  mod.rs  new_messages_pill.rs  permission_prompt.rs  slash_suggestions.rs  spinner.rs  status_bar.rs  task_list.rs  tool_output.rs  user_input_overlay.rs
crates/zerobot-cli/src/tui/keybindings/: default_bindings.rs  mod.rs  types.rs
crates/zerobot-cli/src/tui/layout/: bottom_area.rs  mod.rs  modal_overlay.rs  scroll_box.rs
crates/zerobot-core/: AGENTS.md  Cargo.toml
crates/zerobot-core/prompts/: AGENTS.md
crates/zerobot-core/prompts/modes/: coordinator.md  execute.md  plan.md  review.md
crates/zerobot-core/prompts/system/: behavior.md  evolution.md  hooks.md  identity.md  memory.md  output.md  security.md  skills.md  style.md  task_mgmt.md  tools.md  tools_parallel.md
crates/zerobot-core/src/: AGENTS.md  acp.rs  agent.rs  agent_dispatch.rs  agents.rs  bus.rs  commands.rs  config.rs  context.rs  cron.rs  curator.rs  error.rs  events.rs  gateway.rs  heartbeat.rs  hooks.rs  instruction.rs  interaction.rs  kanban.rs  lib.rs  logging.rs  mcp.rs  memory.rs  memory_tool.rs  notification.rs  permissions.rs  plugin.rs  prompt.rs  provider.rs  self_review.rs  session.rs  settings.rs  skill_manage.rs  skills.rs  task.rs  tool.rs  toolset.rs  workspace.rs
crates/zerobot-core/src/channel/: feishu.rs  mod.rs
crates/zerobot-core/src/swarm/: in_process.rs  mailbox.rs  mod.rs  tools.rs
crates/zerobot-sdk/: AGENTS.md  Cargo.toml
crates/zerobot-sdk/src/: abort.rs  engine.rs  error.rs  lib.rs  message.rs  options.rs  result.rs  session.rs  tool.rs
crates/zerobot-server/: Cargo.toml
crates/zerobot-server/src/: agent.rs  api.rs  context.rs  events.rs  llm.rs  main.rs  mcp.rs  plugins.rs  settings.rs  state.rs  storage.rs  tasks.rs  tools.rs
docs/: architecture.md  cli.md  config.md  dev.md  prompt.md  sdk.md
docs/superpowers/plans/: 2026-05-02-multi-agent-redesign.md  2026-05-03-tui-redesign.md
docs/superpowers/specs/: 2026-05-02-multi-agent-redesign-design.md  2026-05-03-tui-redesign.md
