[workspace]
resolver = "2"
members = [
  "crates/zerobot-core",
  "crates/zerobot-cli",
  "crates/zerobot-sdk",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
arboard = "3.3"
pulldown-cmark = "0.11"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
cron = "0.12"
diffy = "0.3"
futures = "0.3"
glob = "0.3"
httpmock = "0.7"
ignore = "0.4"
pretty_assertions = "1.4"
prost = "0.13"
ratatui = "0.26"
regex = "1.10"
tempfile = "3.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "process", "time", "io-std"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
crossterm = { version = "0.27", features = ["event-stream"] }
unicode-width = "0.1"
syntect = "5.2"
url = "2.5"
uuid = { version = "1.8", features = ["v4", "v5"] }
walkdir = "2.5"
rustyline = "14.0"

[workspace.dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio", "sqlite"]
