[package]
name = "zerobot-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
arboard.workspace = true
base64.workspace = true
clap.workspace = true
console.workspace = true
crossterm.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_yaml.workspace = true
rustyline.workspace = true
unicode-width.workspace = true

zerobot-core = { path = "../zerobot-core" }
