[package]
name = "zerobot-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
arboard.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
console.workspace = true
crossterm.workspace = true
futures.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_yaml.workspace = true
rustyline.workspace = true
unicode-width.workspace = true
syntect.workspace = true

zerobot-core = { path = "../zerobot-core" }
zerobot-sdk = { path = "../zerobot-sdk" }
