[package]
name = "zerobot-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
agent-client-protocol.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
cron.workspace = true
futures.workspace = true
glob.workspace = true
ignore.workspace = true
prost.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
walkdir.workspace = true

diffy.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
httpmock.workspace = true
