[package]
name = "zerobot-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
rusqlite.workspace = true
serde_yaml.workspace = true
glob.workspace = true
walkdir.workspace = true
regex.workspace = true
zerobot-core = { path = "../zerobot-core" }
